--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,8 +1,16 @@
 doctype 5
 html
+
   head
-    title= title
+
+    title Schola
+
+    // CSS
     link(rel='stylesheet', href='/stylesheets/style.css')
+
   body
-     h1= title
-     p Welcome to #{title}
+
+     h1 Welcome to Schola.
+
+     // JS
+     script(type='text/javascript', src='/libraries/jquery-1.10.2.min.js')
