--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -14,25 +14,36 @@ html
 
     nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
       div.container
-        div.navbar-header.navbar-left
+        div.navbar-header
           a.navbar-brand(href='') Schola
+          button.navbar-toggle(data-toggle='collapse', data-target='.navbar-collapse')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        div.collapse.navbar-collapse
+          
 
-    div.container
+    div.container.nonresponsive
       div.row
+
         div.col-xs-9
+
+          form.postForm
+            p
+              strong Add Post
+            
 
           div.postStream
             div.post
               div.postSide
                 div.postTitle
                   span.postUsername rzhou 
-                  | posted a 
-                  span.postType link.
+                  | added a post.
                 div.postDate 22 Apr
                 div.postViews(data-toggle='tooltip', title='42 views') 42 
                   span.glyphicon.glyphicon-eye-open
               div.postMain
-                div.postType
+                div.postIcon
                   span.glyphicon.glyphicon-link
                 div.postName
                   a(href='#') Ray Zhou's Stanford Essays
@@ -44,14 +55,13 @@ html
               div.postSide
                 div.postTitle
                   span.postUsername gshubham 
-                  | posted a 
-                  span.postType file.
+                  | added a post.
                 div.postDate 20 Apr
                 div.postViews(data-toggle='tooltip', title='20 views') 20 
                   span.glyphicon.glyphicon-eye-open
               div.postMain
-                div.postType
-                  span.glyphicon.glyphicon-file
+                div.postIcon
+                  span.glyphicon.glyphicon-link
                 div.postName
                   a(href='#') Shubham Goel's Stanford Essays
                 div.postDescription
@@ -62,14 +72,13 @@ html
               div.postSide
                 div.postTitle
                   span.postUsername bdo 
-                  | posted a 
-                  span.postType text.
+                  | added a post.
                 div.postDate 18 Apr
                 div.postViews(data-toggle='tooltip', title='10 views') 10 
                   span.glyphicon.glyphicon-eye-open
               div.postMain
-                div.postType
-                  span.glyphicon.glyphicon-font
+                div.postIcon
+                  span.glyphicon.glyphicon-link
                 div.postName
                   a(href='#') Brian Do's Stanford Essays
                 div.postDescription
@@ -80,13 +89,12 @@ html
               div.postSide
                 div.postTitle
                   span.postUsername achow 
-                  | posted a 
-                  span.postType link.
+                  | added a post.
                 div.postDate 16 Apr
                 div.postViews(data-toggle='tooltip', title='24 views') 24 
                   span.glyphicon.glyphicon-eye-open
               div.postMain
-                div.postType
+                div.postIcon
                   span.glyphicon.glyphicon-link
                 div.postName
                   a(href='#') Amanda Chow's Stanford Essays
@@ -98,10 +106,10 @@ html
         div.col-xs-3
 
           form.requestForm
-            p 
+            p
               strong Add Request
-            textarea.requestBox
-            button.requestAdd.btn.btn-schola.btn-xs Add Request
+            input.requestBox.form-control(type='text', maxlength='100')
+            button.requestAdd.btn.btn-schola.btn-xs(type='submit') Submit
 
           div.requestStream
             div.request
@@ -109,8 +117,12 @@ html
                 div.requestTitle
                   span.requestUsername anonymous 
                   | requested:
-                div.requestContent Ian Zhou's Stanford college essays
+                div.requestDate 16 Apr
+                div.requestName
+                  | Ian Zhou's Stanford college essays
               div.requestSide
+                div.requestStatus(data-toggle='tooltip', title='Unresolved')
+                  span.glyphicon.glyphicon-unchecked
                 button.btn.btn-default.btn-xs.btn-block
                   span.glyphicon.glyphicon-chevron-up
                   div.requestUpvotes 24
@@ -119,8 +131,26 @@ html
                 div.requestTitle
                   span.requestUsername anonymous 
                   | requested:
-                div.requestContent Roger Chen's Stanford college essays
+                div.requestDate 22 Apr
+                div.requestName
+                  a(href='#') Roger Chen's Stanford college essays
               div.requestSide
+                div.requestStatus(data-toggle='tooltip', title='Resolved')
+                  span.glyphicon.glyphicon-ok
+                button.btn.btn-default.btn-xs.btn-block
+                  span.glyphicon.glyphicon-chevron-up
+                  div.requestUpvotes 28
+            div.request
+              div.requestMain
+                div.requestTitle
+                  span.requestUsername anonymous 
+                  | requested:
+                div.requestDate 25 Apr
+                div.requestName
+                  a(href='#') Edward Wang's Stanford college essays
+              div.requestSide
+                div.requestStatus(data-toggle='tooltip', title='Resolved')
+                  span.glyphicon.glyphicon-ok
                 button.btn.btn-default.btn-xs.btn-block
                   span.glyphicon.glyphicon-chevron-up
                   div.requestUpvotes 28
@@ -130,3 +160,4 @@ html
     script(type='text/javascript', src='/libraries/bootstrap/js/bootstrap.min.js')
     script(type='text/javascript').
       $('.postViews').tooltip({ placement: 'left' });
+      $('.requestStatus').tooltip({ placement: 'right' });
