--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,6 @@ body {
 }
 
 .requestForm .requestAdd {
-  width: 40%;
   float: right;
 }
 
@@ -76,6 +75,18 @@ body {
   width: 60%;
   margin-left: 40%;
   margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.postForm .postBox {
+  min-width: 100%;
+  max-width: 100%;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.postForm .postAdd {
+  float: right;
 }
 
 .post {
@@ -134,12 +145,6 @@ body {
   text-align: right;
 }
 
-.postMain .postAccess .postGet,
-.postMain .postAccess .postDelete {
-  width: 20%;
-  margin-left: 10px;
-}
-
 .navbar-default .navbar-header .navbar-brand {
   color: #ffffff;
   background-color: #3c95d2;
@@ -157,6 +162,7 @@ body {
   background-color: #3c95d2;
   border-color: #2e89c7;
   font-weight: bold;
+  min-width: 80px;
 }
 
 .btn-schola:hover,
@@ -167,7 +173,6 @@ body {
   color: #ffffff;
   background-color: #2e89c7;
   border-color: #297ab2;
-  font-weight: bold;
 }
 
 .btn-schola:active,
@@ -193,7 +198,6 @@ fieldset[disabled] .btn-schola:active,
 fieldset[disabled] .btn-schola.active {
   background-color: #3c95d2;
   border-color: #2e89c7;
-  font-weight: bold;
 }
 
 .btn-schola .caret {
