--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,14 +17,14 @@ body {
   margin-bottom: 20px;
 }
 
-.requestForm .requestBox {
+.requestForm .requestFormName {
   min-width: 100%;
   max-width: 100%;
   display: block;
   margin-bottom: 10px;
 }
 
-.requestForm .requestAdd {
+.requestForm .requestFormSubmit {
   float: right;
 }
 
@@ -78,14 +78,21 @@ body {
   overflow: hidden;
 }
 
-.postForm .postBox {
+.postForm .postFormName {
   min-width: 100%;
   max-width: 100%;
   display: block;
   margin-bottom: 10px;
 }
 
-.postForm .postAdd {
+.postForm .postFormDescription {
+  min-width: 100%;
+  max-width: 100%;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.postForm .postFormSubmit {
   float: right;
 }
 
@@ -155,6 +162,10 @@ body {
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
   background-color: #2e89c7;
+}
+
+.navbar-default .navbar-nav>li>a {
+  font-weight: bold;
 }
 
 .btn-schola {
