--- a/app/views/headerFiles.jade
+++ b/app/views/headerFiles.jade
@@ -1,3 +1,4 @@
+// CSS
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700')
 link(rel='stylesheet', href='/libraries/bootstrap/css/bootstrap.min.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
