Moved password hash file to libraries folder. Implemented front-end socket emitters for login and signup forms.

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -1,10 +1,14 @@
 // JS
 script(type='text/javascript', src='/libraries/jquery-1.10.2.min.js')
 script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.10/socket.io.min.js")
-script(type='text/javascript', src = '/javascripts/sha1.js')
 script(type='text/javascript', src='/libraries/bootstrap/js/bootstrap.min.js')
+script(type='text/javascript', src = '/libraries/sha1.js')
 script(type='text/javascript', src='/javascripts/socket.js')
+
+script(type='text/javascript', src='/javascripts/loginForm.js')
+script(type='text/javascript', src='/javascripts/signUpForm.js')
 script(type='text/javascript', src='/javascripts/postForm.js')
 script(type='text/javascript', src='/javascripts/requestForm.js')
+
 script(type='text/javascript').
       $('.postViews').tooltip({ placement: 'left' });
