--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -26,7 +26,7 @@ html
             button#signUpFormSubmit.btn.btn-schola.btn-sm(type='button') Sign Up
           div.nav.navbar-nav.navbar-right.hidden
             li
-              a(href='#') Log Out 
+              a(href='#') Logout 
                 span.glyphicon.glyphicon-chevron-right
 
     div.container.nonResponsive
