--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -17,35 +17,35 @@ html
             span.icon-bar
             span.icon-bar
         div.collapse.navbar-collapse
-          if isLoggedIn
-            form#logInForm.navbar-form.navbar-right(role='search')
-              div.form-group
-                input.form-control(type='text', name='username', placeholder='Username')
-              div.form-group
-                input.form-control(type='password', name='password', placeholder='Password')
-              button.btn.btn-schola.btn-sm(type='submit') Log In
-              button#signUpFormSubmit.btn.btn-schola.btn-sm(type='button') Sign Up
-          else
-            div.nav.navbar-nav.navbar-right.hidden
-              li
-                a(href='#') Logout 
-                  span.glyphicon.glyphicon-chevron-right
+          //- if isLoggedIn
+          form#logInForm.navbar-form.navbar-right(role='search')
+            div.form-group
+              input.form-control(type='text', name='username', placeholder='Username')
+            div.form-group
+              input.form-control(type='password', name='password', placeholder='Password')
+            button.btn.btn-schola.btn-sm(type='submit') Log In
+            button#signUpFormSubmit.btn.btn-schola.btn-sm(type='button') Sign Up
+          //- else
+          div.nav.navbar-nav.navbar-right.hidden
+            li
+              a(href='#') Logout 
+                span.glyphicon.glyphicon-chevron-right
 
     div.container.nonResponsive
       div.row
 
         div.col-xs-9
 
-          if isLoggedIn and isModerator
-            form#postForm
-              div.postFormSide
-                p
-                  strong Add Post
-                input.postFormName.form-control(name='name', type='text', placeholder='Post name')
-                input.postFormURL.form-control(name='URL', type='text', placeholder='Post URL')
-              div.postFormMain
-                textarea.postFormDescription.form-control(name='desc', rows='3', placeholder='Post description')
-                button.postFormSubmit.btn.btn-schola.btn-xs(type='submit') Post
+          //- if isLoggedIn and isModerator
+          form#postForm
+            div.postFormSide
+              p
+                strong Add Post
+              input.postFormName.form-control(name='name', type='text', placeholder='Post name')
+              input.postFormURL.form-control(name='URL', type='text', placeholder='Post URL')
+            div.postFormMain
+              textarea.postFormDescription.form-control(name='desc', rows='3', placeholder='Post description')
+              button.postFormSubmit.btn.btn-schola.btn-xs(type='submit') Post
 
           div#postStream
             div.post
@@ -171,5 +171,8 @@ html
                 button.btn.btn-default.btn-xs.btn-block.disabled
                   span.glyphicon.glyphicon-chevron-up
                   div.requestUpvotes 28
+
+            div.requestStreamLoading.hidden
+              img(src='/images/loading.gif')
 
     include footerFiles.jade
