Fixed small bugs with login and signup password matching

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -4,6 +4,7 @@ script(type='text/javascript', src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0
 script(type='text/javascript', src='/libraries/bootstrap/js/bootstrap.min.js')
 script(type='text/javascript', src = '/libraries/sha1.js')
 script(type='text/javascript', src='/javascripts/socket.js')
+script(type='text/javascript', src='/javascripts/cookies.js')
 
 script(type='text/javascript', src='/javascripts/loginForm.js')
 script(type='text/javascript', src='/javascripts/signUpForm.js')
