Logout now working

--- a/app/views/footerFiles.jade
+++ b/app/views/footerFiles.jade
@@ -10,6 +10,7 @@ script(type='text/javascript', src='/javascripts/loginForm.js')
 script(type='text/javascript', src='/javascripts/signUpForm.js')
 script(type='text/javascript', src='/javascripts/postForm.js')
 script(type='text/javascript', src='/javascripts/requestForm.js')
+script(type='text/javascript', src='/javascripts/logOut.js')
 
 script(type='text/javascript').
       $('.postViews').tooltip({ placement: 'left' });
