Add isModerator feature filter to index.jade

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -36,7 +36,7 @@ html
 
         div.col-xs-9
 
-          if isLoggedIn
+          if isLoggedIn && isModerator
             form#postForm
               div.postFormSide
                 p
