Added cookie getters and updated post form and request form.

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -125,7 +125,7 @@ html
           form#requestForm
             p
               strong Add Request
-            input.requestFormName.form-control(type='text', name='', maxlength='100', placeholder='Add anonymous request...')
+            input.requestFormName.form-control(type='text', name='name', maxlength='100', placeholder='Add anonymous request...')
             button.requestFormSubmit.btn.btn-schola.btn-xs(type='submit') Request
 
           div#requestStream
